<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_50dp"
    android:background="@drawable/rating_dialog_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/dimen_100dp"
    android:paddingTop="@dimen/dimen_50dp"
    android:paddingEnd="@dimen/dimen_100dp"
    android:paddingBottom="@dimen/dimen_100dp">

    <TextView
        style="@style/style_text_regular"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_25dp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_cancel_this_trip"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_38sp" />

    <Button
        android:id="@+id/btnCancelTripAccept"
        style="@style/style_button_bold"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="@dimen/dimen_80dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_25sp" />

    <Button
        android:id="@+id/btnCancelTripDecline"
        style="@style/style_button_bold"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="@dimen/dimen_80dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:background="@drawable/rounded_corner_empty_bg"
        android:text="@string/not_now"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_25sp" />

</LinearLayout>