<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rating_dialog_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/dimen_100dp"
    android:paddingTop="@dimen/dimen_50dp"
    android:paddingEnd="@dimen/dimen_100dp"
    android:paddingBottom="@dimen/dimen_100dp">

    <TextView
        android:id="@+id/rank_dialog_text1"
        style="@style/style_text_regular"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/person_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_35sp" />

    <RatingBar
        android:id="@+id/dialog_ratingbar"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginBottom="@dimen/dimen_40dp"
        android:numStars="5"
        android:progressBackgroundTint="@color/gray_btn_bg_pressed_color"
        android:progressTint="@color/brand_yellow"
        android:rating="3.5"
        android:stepSize="0.5"/>

    <Button
        android:id="@+id/btnRatingSubmit"
        style="@style/style_button_bold"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_gravity="center"
        android:padding="@dimen/dimen_20dp"
        android:text="@string/submit"
        android:textSize="@dimen/font_25sp" />

    <Button
        android:id="@+id/btnRatingLeave"
        style="@style/style_button_bold"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:background="@drawable/rounded_corner_empty_bg"
        android:padding="@dimen/dimen_20dp"
        android:text="@string/leave_rating"
        android:textSize="@dimen/font_25sp"
        android:textStyle="bold" />

</LinearLayout>