<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ridedetails_rounded_corner"
    android:orientation="vertical"
    android:padding="@dimen/layout_onoffline_padding"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:id="@+id/llOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgOnline"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/drawable_circle_online" />

        <TextView
            android:id="@+id/txtOnline"
            style="@style/style_text_regular"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:text="@string/you_are_offline"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_28sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_100dp"
            android:src="@drawable/ic_arrow_down" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOnlineOffline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <com.app.yellodriver.customview.SwipeView
            android:id="@+id/swipeView"
            android:layout_width="@dimen/swipeview_width"
            android:padding="@dimen/dimen_10dp"
            android:layout_height="wrap_content"
            app:sb_swipe_animate_text="true"
            app:sb_swipe_both_direction="true"
            app:sb_swipe_text="@string/you_are_offline" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSos"
        android:layout_width="@dimen/sosbutton_width"
        android:layout_height="@dimen/sosbutton_height"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/drawable_circle_purple"
        android:text="@string/sos"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_28sp"
        android:textStyle="bold" />

</RelativeLayout>